Tue Jul 15 13:57:08 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/DcpsIntegration/run_test-topic.pl:

	  Changed to use actual object to call methods in error handling
	  section.

Sun Jul 13 19:10:57 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/SetQosDeadline/DataReaderListener.cpp:
        * tests/DCPS/SetQosPartition/DataReaderListener.cpp:

          Removed Stack_Trace header which is not needed.

Sat Jul 12 20:52:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/InfoRepo/DCPS_IR_Publication.h:
        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.h:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_IR_Topic_Description.cpp:

          More fixes from DDS-1.1.1 branch.

            Sat Jul 12 20:30:01 UTC 2008  Yan Dai  <dai_y@ociweb.com>

                    * dds/DCPS/DataReaderImpl.h:
                    * dds/DCPS/DataReaderImpl.cpp:

                      Added overloaded notify_subscription_lost() function passing with
                      instance handles instead of writer ids and use it in
                      remove_association(). This would fix a warning in
                      remove_associations() that lookup cached BIT data failed.

                    * dds/DCPS/DataWriterImpl.h:
                    * dds/DCPS/DataWriterImpl.cpp:

                      Made on_publication_lost() called once in notify_publication_lost
                      instead of for every lost publication.

            Sat Jul 12 08:18:54 UTC 2008  Yan Dai  <dai_y@ociweb.com>

                    * dds/InfoRepo/DCPS_IR_Publication.h:
                    * dds/InfoRepo/DCPS_IR_Publication.cpp: