@@ -1,10 +1,16 @@
+Tue Jul 15 22:26:55 UTC 2008  Adam Mitz  <mitza@ociweb.com>
+
+        * bin/dcps_ts.pl:
+
+          Added --extension which is a plugin mechanism for dcps_ts.pl.
+
 Tue Jul 15 13:57:08 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
 
         * tests/DCPS/DcpsIntegration/run_test-integration.pl:
         * tests/DCPS/DcpsIntegration/run_test-topic.pl:
 
-	  Changed to use actual object to call methods in error handling
-	  section.
+          Changed to use actual object to call methods in error handling
+          section.
 
 Sun Jul 13 19:10:57 UTC 2008  Yan Dai  <dai_y@ociweb.com>
 
